// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug
  </span>
</div>
`;

exports[`ProductTitle debe de mostrar el componente correctamente 1`] = `
<span
  className="productDescription undefined"
>
  custom title
</span>
`;
